Add device data grabbing (ideviceinfo)

--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
       <input type="checkbox" class="textinputs" id="save" value="-s" checked></input>
       <br>
       <button type="button" onclick="backgroundProcess();">Go</button>
+      <button type="button" onclick="getDeviceData();">Get Data</button>
   </body>
 </html>
