--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>tssChecker</title>
+    <title>tssSaver</title>
   </head>
   <body>
     <link rel="stylesheet" href="assets/style.css">
-    <h1>tssChecker</h1>
+    <h1>tssSaver</h1>
     <hr>
     <h3>Log</h3>
     <textarea rows="20" cols="90" id="command-output" disabled="true"></textarea>
