--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   </head>
   <body>
     <link rel="stylesheet" href="assets/style.css">
+    <ph-window>
+        <window-content>
+          <div class="padded-more">
     <h1>tssSaver</h1>
     <hr>
     <h3>Log</h3>
-    <textarea rows="20" cols="90" id="command-output" disabled="true"></textarea>
+    <textarea rows="10" cols="90" id="command-output" disabled="true"></textarea>
     <div id="status"></div>
     <hr>
     <script src="./gui-funct.js"></script>
@@ -16,22 +19,25 @@
         function getCommandOutput() { return document.getElementById("command-output");  };
         function getStatus()      { return document.getElementById("status");  };
     </script>
-      <label for="device">Device</label>
-      <input type="text" class="textinputs" id="device"></input>
+      Device
+      <input type="text" class="textinputs" id="device">
       <br>
-      <label for="ver">iOS Version</label>
-      <input type="text" class="textinputs" id="ver"></input>
+      iOS Version
+      <input type="text" class="textinputs" id="ver">
       <br>
-      <label for="ecid">ECID</label>
-      <input type="text" class="textinputs" id="ecid"></input>
+      ECID
+      <input type="text" class="textinputs" id="ecid">
       <br>
-      <label for="gen">Generator</label>
-      <input type="text" class="textinputs" id="gen" placeholder="0x1111111111111111" value="0x1111111111111111"></input>
+      Generator
+      <input type="text" class="textinputs" id="gen" placeholder="0x1111111111111111" value="0x1111111111111111">
       <br>
-      <label for="save">Save Blobs</label>
-      <input type="checkbox" class="textinputs" id="save" value="-s" checked></input>
-      <br>
-      <button type="button" onclick="backgroundProcess();">Go</button>
-      <button type="button" onclick="getDeviceData();">Get Data</button>
+      Save Blobs
+      <input type="checkbox" class="textinputs" id="save" value="-s" checked>
+      <hr>
+      <button type="button" onclick="backgroundProcess();" class="btn btn-primary">Go</button>
+      <button type="button" onclick="getDeviceData();" class="btn btn-default">Get Data</button>
+    </div>
+    </window-content>
+    </ph-window>
   </body>
 </html>
